--- a/src/components/blog/BlogList.astro
+++ b/src/components/blog/BlogList.astro
@@ -22,14 +22,14 @@ const activeCategories = categories.filter((category) =>
 );
 ---
 
-<section class="site-container mx-auto px-4 py-base">
+<section class="site-container mx-auto px-4 ">
     <div
         class="mb-16 flex flex-col sm:flex-row sm:justify-between sm:items-end gap-6"
         data-aos="fade-in"
         data-aos-delay="100"
     >
         <div class="w-full">
-            <h2 class="text-lg font-semibold mb-4">Filter by Categories:</h2>
+            <h2 class="text-lg font-semibold mb-4">عرض المنشورات بحسب القسم:</h2>
             <div class="flex flex-wrap gap-2">
                 <a
                     href="/blog"
@@ -39,7 +39,7 @@ const activeCategories = categories.filter((category) =>
                             : 'bg-background text-body-base hover:bg-background-light hover:text-body-light'
                     }`}
                 >
-                    Show All
+                    أظهر جميع الأقسام
                 </a>
                 {
                     activeCategories.map((category) => (
@@ -59,9 +59,9 @@ const activeCategories = categories.filter((category) =>
             </div>
         </div>
         <p class="text-small text-body-base text-left sm:text-right whitespace-nowrap">
-            Showing <span class="font-bold text-primary">{posts.length}</span> of <span class="font-bold text-primary"
+            تم إظهار <span class="font-bold text-primary">{posts.length}</span> من <span class="font-bold text-primary"
                 >{allPosts.length}</span
-            > posts
+            > منشور
         </p>
     </div>
 
