--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -31,6 +31,6 @@ const paginatedPosts = sortedPosts.slice(start, end);
     {currentPage}
     {totalPages}
     baseUrl="/blog"
-    title="Blog"
-    subtitle="Latest articles and news from the team"
+    title="آخر الأخبار"
+    subtitle="آخر الأخبار عنا والمشاريع التي قمنا بها"
 />
