--- a/src/pages/team/index.astro
+++ b/src/pages/team/index.astro
@@ -2,6 +2,20 @@
 import Layout from '@layouts/Layout.astro';
 import InnerHero from '@components/sections/InnerHero.astro';
 import TeamGrid from '@components/sections/TeamGrid.astro';
+import Image from 'astro/components/Image.astro';
+
+import image from '../../assets/team/image.jpg';
+import image1 from '../../assets/team/image1.jpg';
+import image2 from '../../assets/team/image2.jpg';
+import image3 from '../../assets/team/image3.jpg';
+import image4 from '../../assets/team/image4.jpg';
+import image5 from '../../assets/team/image5.jpg';
+import image6 from '../../assets/team/image6.jpg';
+import image7 from '../../assets/team/image7.jpg';
+import image8 from '../../assets/team/image8.jpg';
+import image9 from '../../assets/team/image9.jpg';
+
+const images = [image, image1, image2, image3, image4, image5, image6, image7, image8, image9];
 
 const seoTitle = "أعضاء الفريق";
 const seoDescription = "أعضاء الفريق is made up of a diverse group of people who are passionate about building amazing websites with ease.";
@@ -15,5 +29,30 @@ const heroContent = {
 
 <Layout title={seoTitle} description={seoDescription}>
     <InnerHero content={heroContent}  />
-    <TeamGrid padding="base" />
+    <!-- <TeamGrid padding="base" /> -->
+    <section class="relative py-12" style="background-color: var(--color-background);">
+        <div class="site-container mx-auto px-4">
+          <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-8">
+            {images.map((image, index) => (
+              <div
+                class="group relative transition-shadow duration-300"
+                data-aos="fade-up"
+                data-aos-delay={index * 100}
+                data-aos-duration="800"
+              >
+                <div class="overflow-hidden rounded-2xl">
+                  <Image
+                    src={image}
+                    alt=""
+                    class="block w-full h-full object-cover group-hover:scale-105 group-hover:brightness-[1.2] transition-transform duration-500 ease-in-out"
+                    loading="lazy"
+                    decoding="async"
+                  />
+                </div>
+              </div>
+            ))}
+          </div>
+        </div>
+      </section>
+      
 </Layout>
