--- a/src/components/sections/ContactInfo.astro
+++ b/src/components/sections/ContactInfo.astro
@@ -11,6 +11,7 @@ export interface Props {
         contactInfo?: {
             email?: string;
             phone?: string;
+            phone2?: string;
             address?: string;
         };
     };
@@ -33,26 +34,27 @@ const paddingClass = getPaddingClass({ padding, paddingTop, paddingBottom });
 
 ---
 
-<section class:list={[bgColor, paddingClass]}>
-    <div class="site-container px-4">
+<section class:list={[bgColor]}>
+    <div class="site-container pt-[120px] px-4">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
             <div>
-                <h2 class:list={[textColor]}>Contact Information</h2>
+                <h2 class:list={[textColor]}>معلومات التواصل</h2>
+                <br>
                 <p class:list={[textColor]}>
-                    We're here to help you with your questions and concerns.
+                   نحن مستعدون لاستقبال استفساراتك  و حجوزاتك
                 </p>
-                <p class:list={[textColor]}>
-                    You can contact us via email or phone.
-                </p>
+          
                 <div class:list={["flex flex-col gap-2 mt-4", textColor]}>
-                    <div class:list={["flex items-center gap-2"]}><Mail aria-hidden="true" /> <a href={`mailto:${siteConfig.Socials.Email}`}>{siteConfig.Socials.Email}</a></div>
-                    <div class:list={["flex items-center gap-2"]}><Phone aria-hidden="true" /> <a href={`tel:${siteConfig.Socials.Phone}`}>{siteConfig.Socials.Phone}</a></div>
-                    <div class:list={["flex items-center gap-2"]}><MapPin aria-hidden="true" /> <a href={`https://maps.google.com/?q=${siteConfig.Socials.Location}`}>{siteConfig.Socials.Location}</a></div>
+                    <div class:list={["flex items-center gap-4"]}><Mail aria-hidden="true" /> <a href={`mailto:${siteConfig.Socials.Email}`}>{siteConfig.Socials.Email}</a></div>
+                    <div class:list={["flex items-center gap-4"]}><Phone aria-hidden="true" /> <a href={`tel:${siteConfig.Socials.Phone}`}>{siteConfig.Socials.Phone}</a></div>
+                    <div class:list={["flex items-center gap-4"]}><Phone aria-hidden="true" /> <a href={`tel:${siteConfig.Socials.Phone2}`}>{siteConfig.Socials.Phone2}</a></div>
+                    <div class:list={["flex items-center gap-4"]}><MapPin aria-hidden="true" /> <a href={`https://maps.google.com/?q=${siteConfig.Socials.Location}`}>{siteConfig.Socials.Location}</a></div>
                 </div>
             </div>
-            <div>
+       
+            <!-- <div>
                 <Contact />
-            </div>
+            </div> -->
         </div>
     </div>
 </section>
