--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -13,8 +13,8 @@ const seoDescription = "The page you're looking for doesn't exist or has been mo
                 <h1 class="mb-4 text-9xl font-bold text-primary" data-aos="fade-up">404</h1>
                 <h2 class="mb-8" data-aos="fade-up" data-aos-delay="100">Page Not Found</h2>
                 <p class="text-body-base mb-12" data-aos="fade-up" data-aos-delay="200">
-                    The page you're looking for doesn't exist or has been moved. 
-                    Please check the URL or navigate back to our homepage.
+                    الصفحة التي تبحث عنها تم نقلها أو هي غير موجودة
+                    فضلا تحقق من الرابط أو قم بالرجوع الى صفحتنا الرئيسية 
                 </p>
                 <div data-aos="fade-up" data-aos-delay="300">
                     <Button 
@@ -22,7 +22,7 @@ const seoDescription = "The page you're looking for doesn't exist or has been mo
                         variant="primary"
                         size="lg"
                     >
-                        Back to Homepage
+                       قم بالرجوع الى الصفحة الرئيسية
                     </Button>
                 </div>
             </div>
