--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -10,6 +10,6 @@ const heroContent = {
 ---
 
 <Layout title="Contact Us" description="Contact us for more information">
-    <InnerHero content={heroContent} />
+    <!-- <InnerHero content={heroContent} /> -->
     <ContactInfo background="base" padding="base" />
 </Layout>
